--- a/index.html
+++ b/index.html
@@ -1,24 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Social Media Advertising ROI Prediction</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Social Media Advertising ROI Prediction</h1>
-    <p>This page demonstrates my neural network project from Google Colab.</p>
-    <div id="app"></div>
-    <h2>Colab Demo</h2>
-    <p>
-        <a href="https://github.com/AVALKOVA298/Social-media-advertising/commit/6e683a175ce8f58a85e301b1eeefadf2fe7efbae" target="_blank">Run interactive code in Google Colab</a>
-    </p>
-    <h2>Screenshots</h2>
-    <img src="screenshot1.png" alt="Project Screenshot" width="600">
-    <footer>
-        <p>Author: Your Name • Year: 2025</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Social Media Advertising ROI Prediction</h1>
+            <p class="subtitle">
+                Neural network project for forecasting advertising ROI.<br>
+                Developed in Google Colab, deployed for web presentation.
+            </p>
+        </header>
+
+        <section>
+            <h2>Description</h2>
+            <ul>
+                <li>Automated data cleaning and preprocessing</li>
+                <li>Feature engineering and encoding</li>
+                <li>Model training with MLP neural networks</li>
+                <li>Interactive ROI prediction via Colab</li>
+            </ul>
+            <p>
+                Learn more from the <a href="README.md" target="_blank">README.md</a>.
+            </p>
+        </section>
+
+        <section>
+            <h2>Colab Demo</h2>
+            <a class="btn" href="ВАША_ССЫЛКА_НА_COLAB" target="_blank">
+                🚀 Launch Interactive Notebook
+            </a>
+        </section>
+
+        <section>
+            <h2>Screenshots</h2>
+            <img src="screenshot1.png" alt="Project Screenshot" class="screenshot" />
+        </section>
+
+        <footer>
+            <hr />
+            <p>Author: Your Name &bull; Year: 2025</p>
+            <p>
+                <a href="https://github.com/aval'kova298" target="_blank">GitHub Profile</a>
+            </p>
+        </footer>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
