--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section>
             <h2>Colab Demo</h2>
-            <a class="btn" href="ВАША_ССЫЛКА_НА_COLAB" target="_blank">
+            <a class="btn" href="https://github.com/AVALKOVA298/Social-media-advertising/commit/24ab2a706eb4805241ba7a450b05fbfebc3e7cfc" target="_blank">
                 🚀 Launch Interactive Notebook
             </a>
         </section>
@@ -43,7 +43,7 @@
 
         <footer>
             <hr />
-            <p>Author: Your Name &bull; Year: 2025</p>
+            <p>Author: Valkova Anastasia &bull; Year: 2025</p>
             <p>
                 <a href="https://github.com/aval'kova298" target="_blank">GitHub Profile</a>
             </p>
