--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </section>
 
         <section>
+    <h2>ROI Calculator (Demo)</h2>
+    <div id="roi-demo" class="demo-block"></div>
+</section>
+
+        <section>
             <h2>Screenshots</h2>
             <img src="screenshot1.png" alt="Project Screenshot" class="screenshot" />
         </section>
