--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
             </p>
         </section>
 
+<section>
+  <h2>Data Analytics Insights</h2>
+  <ul>
+    <li><b>Most effective channel:</b> Instagram &rarr; consistently delivers top ROI in test campaigns.</li>
+    <li><b>Duration:</b> Shorter campaigns (10–18 days) с высоким <b>engagement score</b> показывают наилучший результат.</li>
+    <li><b>Conversion Rate:</b> Более 0.2 часто необязательно — ROI ограничен acquisition cost, а не только engagement.</li>
+    <li><b>Influential features:</b> Engagement score, channel, and acquisition cost — ключевые драйверы результата модели.</li>
+    <li><b>Средний прогнозируемый ROI по всем данным:</b> 2.45</li>
+  </ul>
+</section>
+
         <section>
             <h2>Colab Demo</h2>
             <a class="btn" href="https://github.com/AVALKOVA298/Social-media-advertising/commit/24ab2a706eb4805241ba7a450b05fbfebc3e7cfc" target="_blank">
@@ -39,6 +50,35 @@
         <section>
     <h2>ROI Calculator (Demo)</h2>
     <div id="roi-demo" class="demo-block"></div>
+</section>
+
+        <section>
+  <h2>Business Recommendations</h2>
+  <ul>
+    <li>Рекомендуем запускать кампании <b>на 10-15 дней</b> в Instagram с focus на engagement.</li>
+    <li>Для <b>молодой аудитории (18–35)</b> используйте Instagram или Facebook — на 18% выше ROI.</li>
+    <li>Минимизируйте <b>acquisition cost:</b> при снижении затрат на привлечение ROI растет экспоненциально.</li>
+    <li>Оптимизируйте креатив под <b>engagement score</b> — рост даже на 2 пункта дает выгоду в итоговом ROI.</li>
+    <li>Тестировать новые каналы рекомендуется в периоды низкой конкуренции (выходные/вечер).</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Key Insights</h2>
+  <div class="insights">
+    <div class="card">
+      <span style="font-size:1.3em;">🔥</span><br>
+      Engagement важнее всех — увеличение на 20% даёт +0.5 ROI в среднем.
+    </div>
+    <div class="card">
+      <span style="font-size:1.3em;">💰</span><br>
+      Ваша цена за привлечение — основной барьер для explosive ROI.
+    </div>
+    <div class="card">
+      <span style="font-size:1.3em;">📈</span><br>
+      Для разных сегментов лучший канал различается — универсального решения нет.
+    </div>
+  </div>
 </section>
 
         <section>
