--- a/index.html
+++ b/index.html
@@ -31,13 +31,36 @@
 
 <section>
   <h2>Data Analytics Insights</h2>
-  <ul>
-    <li><b>Most effective channel:</b> Instagram &rarr; consistently delivers top ROI in test campaigns.</li>
-    <li><b>Duration:</b> Shorter campaigns (10–18 days) с высоким <b>engagement score</b> показывают наилучший результат.</li>
-    <li><b>Conversion Rate:</b> Более 0.2 часто необязательно — ROI ограничен acquisition cost, а не только engagement.</li>
-    <li><b>Influential features:</b> Engagement score, channel, and acquisition cost — ключевые драйверы результата модели.</li>
-    <li><b>Средний прогнозируемый ROI по всем данным:</b> 2.45</li>
-  </ul>
+  <div class="info-cards">
+    <div class="info-card">
+      <span class="info-icon">📊</span>
+      <div>
+        <h3>Best Performing Channel</h3>
+        <p>Instagram consistently demonstrates the highest ROI across campaigns, outperforming Facebook and LinkedIn for most demographics.</p>
+      </div>
+    </div>
+    <div class="info-card">
+      <span class="info-icon">⏱️</span>
+      <div>
+        <h3>Optimal Duration</h3>
+        <p>Short campaigns (10–18 days) with high engagement scores achieve the best results and minimize diminishing returns.</p>
+      </div>
+    </div>
+    <div class="info-card">
+      <span class="info-icon">🙋‍♀️</span>
+      <div>
+        <h3>Key Drivers</h3>
+        <p>Engagement rate, acquisition cost, and channel selection are the greatest contributors to ROI according to model feature importance.</p>
+      </div>
+    </div>
+    <div class="info-card">
+      <span class="info-icon">📈</span>
+      <div>
+        <h3>Average Predicted ROI</h3>
+        <p>The overall average ROI in the dataset is 2.45, with campaigns exceeding 3 considered highly successful.</p>
+      </div>
+    </div>
+  </div>
 </section>
 
         <section>
@@ -54,13 +77,36 @@
 
         <section>
   <h2>Business Recommendations</h2>
-  <ul>
-    <li>Рекомендуем запускать кампании <b>на 10-15 дней</b> в Instagram с focus на engagement.</li>
-    <li>Для <b>молодой аудитории (18–35)</b> используйте Instagram или Facebook — на 18% выше ROI.</li>
-    <li>Минимизируйте <b>acquisition cost:</b> при снижении затрат на привлечение ROI растет экспоненциально.</li>
-    <li>Оптимизируйте креатив под <b>engagement score</b> — рост даже на 2 пункта дает выгоду в итоговом ROI.</li>
-    <li>Тестировать новые каналы рекомендуется в периоды низкой конкуренции (выходные/вечер).</li>
-  </ul>
+  <div class="recommend-cards">
+    <div class="recommend-card">
+      <span>🚀</span>
+      <div>
+        <strong>Instagram-focused campaigns 10–15 days</strong>
+        <p>Maximize engagement and conversions with shorter bursts on Instagram.</p>
+      </div>
+    </div>
+    <div class="recommend-card">
+      <span>🎯</span>
+      <div>
+        <strong>Target 18–35 audience</strong>
+        <p>This group delivers up to 18% higher ROI, especially with visually engaging content.</p>
+      </div>
+    </div>
+    <div class="recommend-card">
+      <span>💡</span>
+      <div>
+        <strong>Lower acquisition costs</strong>
+        <p>Reducing cost per acquisition yields exponential increases in campaign ROI.</p>
+      </div>
+    </div>
+    <div class="recommend-card">
+      <span>📊</span>
+      <div>
+        <strong>Optimize for engagement</strong>
+        <p>Small improvements to engagement score significantly boost predicted ROI.</p>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section>
@@ -68,15 +114,15 @@
   <div class="insights">
     <div class="card">
       <span style="font-size:1.3em;">🔥</span><br>
-      Engagement важнее всех — увеличение на 20% даёт +0.5 ROI в среднем.
+      Boosting engagement by 20% increases ROI by 0.5 on average.
     </div>
     <div class="card">
       <span style="font-size:1.3em;">💰</span><br>
-      Ваша цена за привлечение — основной барьер для explosive ROI.
+      Lower cost per acquisition is the fastest path to superior results.
     </div>
     <div class="card">
       <span style="font-size:1.3em;">📈</span><br>
-      Для разных сегментов лучший канал различается — универсального решения нет.
+      The best platform varies by segment – there’s no one-size-fits-all solution.
     </div>
   </div>
 </section>
