--- a/index.html
+++ b/index.html
@@ -64,6 +64,52 @@
 </section>
 
         <section>
+  <h2>Data Analytics Highlights</h2>
+  <div class="highlight-numbers">
+    <div class="number-card">
+      <span>3.47</span>
+      <p>Top ROI Achieved</p>
+    </div>
+    <div class="number-card">
+      <span>2.45</span>
+      <p>Average ROI</p>
+    </div>
+    <div class="number-card">
+      <span>0.91</span>
+      <p>Lowest ROI</p>
+    </div>
+    <div class="number-card">
+      <span>15 days</span>
+      <p>Optimal Duration</p>
+    </div>
+  </div>
+  <div class="analytics-table-wrapper">
+    <table class="analytics-table">
+      <tr>
+        <th>Channel</th>
+        <th>Avg. ROI</th>
+        <th>Best Audience</th>
+      </tr>
+      <tr>
+        <td>Instagram</td>
+        <td>3.1</td>
+        <td>18–35</td>
+      </tr>
+      <tr>
+        <td>Facebook</td>
+        <td>2.7</td>
+        <td>36–50</td>
+      </tr>
+      <tr>
+        <td>LinkedIn</td>
+        <td>1.8</td>
+        <td>All Ages</td>
+      </tr>
+    </table>
+  </div>
+</section>
+
+        <section>
             <h2>Colab Demo</h2>
             <a class="btn" href="https://github.com/AVALKOVA298/Social-media-advertising/commit/24ab2a706eb4805241ba7a450b05fbfebc3e7cfc" target="_blank">
                 🚀 Launch Interactive Notebook
