--- a/index.html
+++ b/index.html
@@ -17,6 +17,46 @@
         </header>
 
         <section>
+  <div class="project-desc">
+    <div class="desc-icon">🧠</div>
+    <div>
+      <h2>Project Overview</h2>
+      <div class="desc-core">
+        <p>
+          This web project visualizes the power of neural networks for social media advertising — turning raw campaign data into sharp business insights and instantly predicting ROI based on live campaign parameters.
+        </p>
+        <div class="desc-keypoints">
+          <div class="desc-key">
+            <span>🔬</span>
+            <div>
+              <strong>Data Cleansing & Analysis:</strong>
+              <br>
+              Automated filtering and feature engineering to prepare real-world campaign datasets.
+            </div>
+          </div>
+          <div class="desc-key">
+            <span>🤖</span>
+            <div>
+              <strong>Machine Learning Pipeline:</strong>
+              <br>
+              Multi-layer neural network trained for regression — designed to identify top drivers of ROI with maximum accuracy.
+            </div>
+          </div>
+          <div class="desc-key">
+            <span>📊</span>
+            <div>
+              <strong>Interactive Prediction Widget:</strong>
+              <br>
+              Designed for instant ROI simulation based on user-selected parameters, channels, and audience segments.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+        <section>
             <h2>Description</h2>
             <ul>
                 <li>Automated data cleaning and preprocessing</li>
