--- a/index.html
+++ b/index.html
@@ -57,17 +57,21 @@
 </section>
 
         <section>
-            <h2>Description</h2>
-            <ul>
-                <li>Automated data cleaning and preprocessing</li>
-                <li>Feature engineering and encoding</li>
-                <li>Model training with MLP neural networks</li>
-                <li>Interactive ROI prediction via Colab</li>
-            </ul>
-            <p>
-                Learn more from the <a href="README.md" target="_blank">README.md</a>.
-            </p>
-        </section>
+  <div class="readme-card">
+    <div>
+      <span class="readme-icon">📚</span>
+    </div>
+    <div>
+      <h2>Explore Full Project Details</h2>
+      <p>
+        See methodology, code snippets, and feature explanations in our interactive README.<br>
+        <a class="readme-link" href="README.md" target="_blank">
+          Open README.md
+        </a>
+      </p>
+    </div>
+  </div>
+</section>
 
 <section>
   <h2>Data Analytics Insights</h2>
