--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
   </div>
 </section>
 
+        <span class="info-icon icon-performance">📊</span>
+<span class="info-icon icon-learning">🤖</span>
+<span class="info-icon icon-efficiency">💰</span>
+<span class="info-icon icon-risk">⚠️</span>
+<span class="info-icon icon-insight">💡</span>
+<span class="info-icon icon-growth">🌱</span>
+
         <footer>
             <hr />
             <p>Author: Valkova Anastasia &bull; Year: 2025</p>
