--- a/index.html
+++ b/index.html
@@ -217,6 +217,74 @@
   </div>
 </section>
 
+        <body>
+  <header>
+    <h1>Social Media Advertising ROI Dashboard</h1>
+  </header>
+  
+  <section>
+    <div class="readme-card">
+      <span class="readme-icon">📚</span>
+      <div>
+        <h2>Explore Project Details</h2>
+        <p>
+          All documentation, workflow, and code structure are described in our README file.
+          <br>
+          <a class="readme-link" href="README.md" target="_blank">Open README.md</a>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Data Analytics Highlights</h2>
+    <div class="highlight-row">
+      <div class="highlight-card highlight-blue">
+        <h3>Best ROI</h3>
+        <p>3.47</p>
+      </div>
+      <div class="highlight-card highlight-green">
+        <h3>Average ROI</h3>
+        <p>2.45</p>
+      </div>
+      <div class="highlight-card highlight-orange">
+        <h3>Lowest ROI</h3>
+        <p>0.91</p>
+      </div>
+      <div class="highlight-card highlight-yellow">
+        <h3>Optimal Duration</h3>
+        <p>15 days</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Business Recommendations</h2>
+    <div class="recommend-row">
+      <div class="recommend-card recommend-green">
+        <strong>Focus on Instagram</strong>
+        <p>Optimize campaigns for 10-15 days and maximize engagement.</p>
+      </div>
+      <div class="recommend-card recommend-blue">
+        <strong>Target 18–35 Audience</strong>
+        <p>Delivers 18% higher ROI compared to other groups.</p>
+      </div>
+      <div class="recommend-card recommend-orange">
+        <strong>Cut Acquisition Costs</strong>
+        <p>Reducing cost per conversion drastically improves profitability.</p>
+      </div>
+      <div class="recommend-card recommend-yellow">
+        <strong>Boost Engagement</strong>
+        <p>Even small engagement improvements create significant returns.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    Author: Valkova Anastasia &bull; Year: 2025
+  </footer>
+</body>
+
         <footer>
             <hr />
             <p>Author: Valkova Anastasia &bull; Year: 2025</p>
