--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
 </section>
 
         <section>
+  <h2>Data Analytics Highlights</h2>
+  <div class="highlight-grid">
+    <div class="highlight-card highlight-blue">
+      <span>3.47</span>
+      <p>Top ROI Achieved</p>
+    </div>
+    <div class="highlight-card highlight-green">
+      <span>2.45</span>
+      <p>Average ROI</p>
+    </div>
+    <div class="highlight-card highlight-orange">
+      <span>0.91</span>
+      <p>Lowest ROI</p>
+    </div>
+    <div class="highlight-card highlight-yellow">
+      <span>15 days</span>
+      <p>Optimal Duration</p>
+    </div>
+  </div>
+</section>
+
+        <section>
             <h2>Colab Demo</h2>
             <a class="btn" href="https://github.com/AVALKOVA298/Social-media-advertising/commit/24ab2a706eb4805241ba7a450b05fbfebc3e7cfc" target="_blank">
                 🚀 Launch Interactive Notebook
