--- a/index.html
+++ b/index.html
@@ -205,16 +205,31 @@ new Chart(document.getElementById('featureImportance'), {
 <section>
   <h2>ROI Calculator (Demo)</h2>
   <div id="roi-demo" class="demo-block">
-    <label>Duration (days): <input type="range" min="5" max="30" value="14"></label>
-    <label>Conversion Rate: <input type="range" min="0" max="1" step="0.01" value="0.15"></label>
-    <label>Acquisition Cost: <input type="range" min="100" max="3000" value="1050"></label>
-    <label>Engagement Score: <input type="range" min="1" max="10" value="5"></label>
-    <select>...</select>
+    <div class="sliders-row">
+      <label>Duration (days):<input type="range" min="5" max="30" value="14" id="duration"></label>
+      <label>Conversion Rate:<input type="range" min="0" max="1" step="0.01" value="0.15" id="conversion"></label>
+      <label>Acquisition Cost:<input type="range" min="100" max="3000" value="1050" id="cost"></label>
+      <label>Engagement Score:<input type="range" min="1" max="10" value="5" id="engagement"></label>
+      <label>Channel:
+        <select id="channel">
+          <option>Facebook</option>
+          <option>Instagram</option>
+          <option>LinkedIn</option>
+        </select>
+      </label>
+      <label>Audience:
+        <select id="audience">
+          <option>All Ages</option>
+          <option>18–35</option>
+          <option>36–50</option>
+        </select>
+      </label>
+    </div>
     <div class="result">Predicted ROI: <span id="roi-result"></span></div>
   </div>
 </section>
 
-        <section>
+<section>
   <h2>Business Recommendations</h2>
   <div class="recommend-cards">
     <div class="recommend-card">
