--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   </div>
 </section>
 
+<div style="display: flex; flex-direction: column; align-items: center;">
 <section>
   <h2>Model Training</h2>
   <div id="training-status" class="training-status-card">
