--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   </div>
 </section>
 
-<div style="display: flex; flex-direction: column; align-items: center;">
-<section>
+<div style="display: flex; flex-direction: column; align-items: center; width: 100%;">
+<section style="width:100%;max-width:560px;">
   <h2>Model Training</h2>
   <div id="training-status" class="training-status-card">
     <div id="status-message">Model not trained. Click "Train Model" to start!</div>
