--- a/index.html
+++ b/index.html
@@ -56,20 +56,40 @@
   </div>
 </section>
 
-        <section>
-  <div class="readme-card">
-    <div>
-      <span class="readme-icon">📚</span>
-    </div>
-    <div>
-      <h2>Explore Full Project Details</h2>
-      <p>
-        See methodology, code snippets, and feature explanations in our interactive README.<br>
-        <a class="readme-link" href="README.md" target="_blank">
-          Open README.md
-        </a>
-      </p>
-    </div>
+<section style="max-width:850px; margin:0 auto; border-radius:24px; background:#f7fafd; box-shadow:0 4px 24px #e3e8fa; padding:36px 28px 32px 28px;">
+  <h2 style="font-size:2em; font-weight:700; color:#233; margin-bottom:18px;">Dataset Overview</h2>
+  <div style="font-size:1.14em; color:#1a3265; margin-bottom:14px;">
+    Key campaign results and metrics from the project dataset.
+  </div>
+  <table class="data-table" style="width:100%;border-collapse:collapse;background:#fff;border-radius:12px;box-shadow:0 1px 8px #f2f2f7;overflow:hidden;">
+    <thead>
+      <tr style="background:#f2f6ff;">
+        <th>Campaign</th>
+        <th>Channel</th>
+        <th>Duration</th>
+        <th>Budget</th>
+        <th>ROI</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Alpha</td><td>Instagram</td><td>14</td><td>$1200</td><td>2.8</td>
+      </tr>
+      <tr>
+        <td>Beta</td><td>Facebook</td><td>21</td><td>$1800</td><td>3.2</td>
+      </tr>
+      <tr>
+        <td>Gamma</td><td>Twitter</td><td>10</td><td>$900</td><td>1.3</td>
+      </tr>
+      <tr>
+        <td>Delta</td><td>LinkedIn</td><td>7</td><td>$700</td><td>1.1</td>
+      </tr>
+    </tbody>
+  </table>
+  <div style="margin-top:22px;">
+    <button style="padding:8px 42px; font-size:1.14em; background:linear-gradient(90deg,#4fc3f7,#68e4a6); color:#fff; border:none; border-radius:16px; box-shadow:0 2px 9px #e4faf8; cursor:pointer;">
+      Download Full Dataset
+    </button>
   </div>
 </section>
 
