--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 </section>
 
-<section style="max-width:850px; margin:0 auto; border-radius:24px; background:#f7fafd; box-shadow:0 4px 24px #e3e8fa; padding:36px 28px 32px 28px;">
+<section style="max-width:850px; margin:40px auto; border-radius:24px; background:#f7fafd; box-shadow:0 4px 24px #e3e8fa; padding:36px 28px 32px 28px;">
   <h2 style="font-size:2em; font-weight:700; color:#233; margin-bottom:18px;">Dataset Overview</h2>
   <div style="font-size:1.14em; color:#1a3265; margin-bottom:14px;">
     Key campaign results and metrics from the project dataset.
@@ -86,10 +86,12 @@
       </tr>
     </tbody>
   </table>
+  <!-- Кнопка для скачивания файла CSV -->
   <div style="margin-top:22px;">
-    <button style="padding:8px 42px; font-size:1.14em; background:linear-gradient(90deg,#4fc3f7,#68e4a6); color:#fff; border:none; border-radius:16px; box-shadow:0 2px 9px #e4faf8; cursor:pointer;">
+    <a href="Social_Media_Advertising.csv" download
+       style="padding:8px 42px; font-size:1.14em; background:linear-gradient(90deg,#4fc3f7,#68e4a6); color:#fff; border:none; border-radius:16px; box-shadow:0 2px 9px #e4faf8; cursor:pointer; text-align:center; text-decoration:none; font-weight:500; display:inline-block;">
       Download Full Dataset
-    </button>
+    </a>
   </div>
 </section>
 
