--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </table>
   <!-- Кнопка для скачивания файла CSV -->
   <div style="margin-top:22px;">
-    <a href="Social_Media_Advertising.csv" download
+    <a href="Social_Media_Advertising.csv.zip" download
        style="padding:8px 42px; font-size:1.14em; background:linear-gradient(90deg,#4fc3f7,#68e4a6); color:#fff; border:none; border-radius:16px; box-shadow:0 2px 9px #e4faf8; cursor:pointer; text-align:center; text-decoration:none; font-weight:500; display:inline-block;">
       Download Full Dataset
     </a>
